--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,17 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.louisgeek.louistimelinedemo.MainActivity">
+    tools:context=".aty.MainActivity">
+    <Button
+        android:id="@+id/id_btn_1_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="下一个Aty"
+        />
+
 <razerdp.widget.UnderLineLinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/underline_layout"
+    android:layout_below="@id/id_btn_1_2"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:line_margin_side="25dp"
